--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -18,6 +18,8 @@ dataSources:
       entities:
         - Token
       abis:
+        - name: ERC20
+          file: ./abis/ERC20.json
         - name: ExchangeV3
           file: ./abis/ExchangeV3.json
       eventHandlers:
