--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -25,4 +25,6 @@ dataSources:
       eventHandlers:
         - event: TokenRegistered(address,uint16)
           handler: handleTokenRegistered
+        - event: BlockSubmitted(indexed uint256,bytes32,bytes32)
+          handler: handleBlockSubmitted
       file: ./src/mapping.ts
